fix broken ui of favorite

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -843,8 +843,8 @@ main {
  * Favorite
  */
 
-.favorite__wrapper {
-  margin-top: 100px;
+.favorite_content__wrapper {
+  margin-top: 80px;
 }
 
 /*
